# glpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/commons/: CMakeLists.txt  common.cpp  common.hpp
examples/hello_opengl/: CMakeLists.txt  logo.hpp  main.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp
examples/hellotriangle/: CMakeLists.txt  main.cpp
examples/many_axes/: CMakeLists.txt  main.cpp
examples/many_dices/: CMakeLists.txt  faces.hpp  main.cpp
examples/n_body/: CMakeLists.txt  main.cpp
include/glpp/: attrib.inc  buffer.hpp  gl.h  glpp.hpp  idhandle.hpp  program.hpp  shader.hpp  texture.hpp  uniform.inc  vertexarray.hpp
include/glpp/details/: idhandle.hpp  object.hpp
src/: CMakeLists.txt
